# apps/users/models.py
@@ -34,16 +34,16 @@ def upload_banner(instance, filename):
 
 
 class Partner(MyUser):
-    activity_type = models.ForeignKey(ActivityType, on_delete=models.SET_NULL, null=True, blank=True)
+    activity_type = models.CharField(max_length=255, null=False, blank=False)
     brand_name = models.CharField(max_length=255, null=False, blank=False)
     organization_form = models.CharField(max_length=255, null=False, blank=False)
-    phone_number = models.CharField(max_length=255, null=False, blank=False)
     description = models.TextField(max_length=1000, null=True, blank=True)
     inn = models.CharField(max_length=255, null=False, blank=False)
     isVip = models.BooleanField(default=False)
     transaction_quantity = models.IntegerField(default=0, null=True, blank=True)
     logo = models.ImageField(default='default.png', upload_to=upload_logo)
     banner = models.ImageField(default='default.png', upload_to=upload_banner)
+
 
     def __str__(self):
         return self.brand_name
@@ -60,6 +60,37 @@ class User(MyUser):
     def __str__(self):
         return f'{self.name}, {self.second_name}'
 
+
+class PartnerPhoneNumber(models.Model):
+    partner = models.ForeignKey(Partner, on_delete=models.CASCADE)
+    phone1 = models.CharField(max_length=255, null=True, blank=True)
+    phone2 = models.CharField(max_length=255, null=True, blank=True)
+    phone3 = models.CharField(max_length=255, null=True, blank=True)
+    phone4 = models.CharField(max_length=255, null=True, blank=True)
+
+    def __str__(self):
+        return f'{self.partner}'
+
+
+class PartnerSocialMedia(models.Model):
+    partner = models.ForeignKey(Partner, on_delete=models.CASCADE)
+    whatsapp = models.CharField(max_length=255, null=True, blank=True)
+    youtube = models.CharField(max_length=255, null=True, blank=True)
+    telegram = models.CharField(max_length=255, null=True, blank=True)
+    facebook = models.CharField(max_length=255, null=True, blank=True)
+
+    def __str__(self):
+        return f'{self.partner}'
+
+
+class WorkingMode(models.Model):
+    partner = models.ForeignKey(Partner, on_delete=models.CASCADE)
+    schedule = models.CharField(max_length=255, null=True, blank=True)
+    start = models.CharField(max_length=255, null=True, blank=True)
+    end = models.CharField(max_length=255, null=True, blank=True)
+
+    def __str__(self):
+        return f'{self.partner}'
 
 class Admin(MyUser):
     name = models.CharField(max_length=255, null=False, blank=False)
